--- a/frontendPart/webcode/templates/index.html
+++ b/frontendPart/webcode/templates/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
+  <input type="button" id="ayuda" value="Ayuda">
+  <h2>Chet</h2>
+  <h3 id="subtitle">Videogames Store</h3>
+  
+  <hr>
+  <div id="message">
+    {%for msg in messages%}
+      <p id="txtmessage">{{ msg }}</p>
+  {%endfor%}
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script>
         var bar2Config = {
@@ -61,32 +73,63 @@
         };
     
       </script>
-    <form action="/csvfiles/" method="post"  enctype="multipart/form-data">
-        {% csrf_token %}
-        <h3>Archivo de Clientes</h3>
-        <input type="file" name="clientesdata" id="clientesdata">
-        <h3>Archivo de Mejores Clientes</h3>
-        <input type="file" name="mejoresdata" id="mejoresdata">
-        <h3>Archivo de juegos más Vendidos</h3>
-        <input type="file" name="juegosvendidosdata" id="juegosvendidosdata">
-        <h3>Archivo de todos los juegos</h3>
-        <input type="file" name="juegosdata" id="juegosdata">
-        <input type="submit" value="Enviar">
-    </form>
+      <div class="formulario" id="tarea">
+        <form action="/csvfiles/" method="post"  enctype="multipart/form-data">
+          {% csrf_token %}
+          <div>
+            <div id="Files">
+              <p id="texto">Cargar Clientes</p>
+              <input type="file" name="clientesdata" id="btn">
+            </div>
+            
+            <div id="Files">
+              <p id="texto">Cargar Mejores Clientes</p>
+              <input type="file" name="mejoresdata" id="btn">
+            </div>
+            <div id="Files">
+              <p id="texto">Cargar Juegos Mas Vendidos</p>
+              <input type="file" name="juegosvendidosdata" id="btn">
+            </div>
+            <div id="Files">
+              <p id="texto">Cargar todos los juegos</p>
+              <input type="file" name="juegosdata" id="btn">
+            </div>
+          </div>
+          <div id="sendBtn">
+            <input type="submit" value="Enviar" id="envbutton">
+          </div>
+
+      </div>
     
-    <h2>XML a enviar</h2>
-    <form action="/sendXML/" method="post"  enctype="multipart/form-data">
-      {% csrf_token %}
-      <textarea name="out" id="out" cols="80" rows="30">
-        {{XML}}
-    </textarea>
-      <input type="submit" value="Enviar">
-  </form>
-    <h2>XML de retorno</h2>
-    <textarea name="out2" id="out2" cols="80" rows="30" readonly>
-        {{content}}
-    </textarea>
-    <h2>Graficas</h2>
+    </form>
+    <div>
+
+      <div class="area">
+        <h2><span>XML A ENVIAR</span></h2>
+        <form action="/sendXML/" method="post"  enctype="multipart/form-data">
+          {% csrf_token %}
+          <textarea name="out" id="out" cols="120" rows="50" id= >
+            {{XML}}
+        </textarea>
+        <div id="sendXML"><input type="submit" value="Enviar XML" id="btnXML"></div>
+          
+      </form>
+      </div>
+      
+      
+      <div class="area">
+        <h2><span>XML RETORNADO</span></h2>
+        <textarea name="out2" id="out2" cols="120" rows="50" readonly>
+            {{content}}
+        </textarea>
+      </div>
+    </div>
+    
+    <hr>
+    <div class="Graficas">
+      
+      <h1>Graficas</h1>
+      
     <h3>Mejores Clientes</h3>
     <div id="container" style="width: 75%;">
       <canvas id="bar-chart"></canvas>
@@ -100,21 +143,21 @@
       <canvas id="clas-chart"></canvas>
   </div>
   <h3>Cumpleaños de Clientes</h3>
-  <table border="1" cellpading = "1" cellspacing = "2">
-    <thead>
-      <tr>
-        <td>Nombre y Apellido</td><td>Fecha</td>
-      </tr>
-    </thead>
-    {%for i in dataCum%}
-       <tr>
-          <td>{{i.nombreC}}</td>
-          <td>{{i.fechaC}}</td>
-       </tr> 
-    {% endfor%}
-  </table>
+      <table>
+        <thead>
+          <tr>
+            <td>Nombre y Apellido</td><td>Fecha</td>
+          </tr>
+        </thead>
+        {%for i in dataCum%}
+          <tr>
+              <td>{{i.nombreC}}</td>
+              <td>{{i.fechaC}}</td>
+          </tr> 
+        {% endfor%}
+      </table>
   <h3>Listado de Juegos</h3>
-  <table border="1" cellpading = "1" cellspacing = "2">
+  <table>
     <thead>
       <tr>
         <td>Nombre del juego</td><td>Stock</td>
@@ -127,5 +170,8 @@
        </tr> 
     {% endfor%}
   </table>
+
+    </div>
+    
 </body>
 </html>
