--- a/frontendPart/webcode/templates/index.html
+++ b/frontendPart/webcode/templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <input type="button" id="ayuda" value="Ayuda">
+  <input type="button" onclick="alert('Camilo Ernesto Sincal Sipac - 202000605')" id="ayuda" value="Ayuda">
   <h2>Chet</h2>
   <h3 id="subtitle">Videogames Store</h3>
   
